# InsightFinder

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  render.yaml
api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  run.py
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py
api/app/: __init__.py  alerts.py  answer.py  cache.py  db.py  eval.py  jobs.py  logging.py  main.py  rate_limit.py  settings.py  spend_tracker.py
api/app/api/: __init__.py  dashboard.py  health.py  pipelines.py  search.py
api/app/ingest/: __init__.py  chunk.py  embed.py  extract.py  index.py  pipeline.py  runs.py
api/app/search/: __init__.py  rerank.py  retrieve.py  service.py
api/scripts/: ingest_all.py  ingest_one.py  inspect_hnsw.py  inspect_ingestion.py  inspect_schema.py  sec_fetch.py
data/raw/: _index.csv
docs/: DEPLOY.md  ROADMAP.md
infra/postgres/init/: 01-extensions.sql
scripts/db/: verify.py  verify.sh
web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboard/: page.tsx
web/app/pipelines/: page.tsx
web/components/dashboard/: AlertsPanel.tsx  KpiCard.tsx  PerformanceChart.tsx  TopQueriesTable.tsx
web/components/layout/: Sidebar.tsx
web/components/pipelines/: FilingPicker.tsx  PipelineDAG.tsx  RecentJobsTable.tsx
web/components/query/: AnswerCard.tsx  CitationChip.tsx  EvalGatesCard.tsx  QueryInput.tsx  SourcesTable.tsx
web/components/right-rail/: ActiveFilters.tsx  QueryHistory.tsx  SystemLogs.tsx
web/components/ui/: Container.tsx
web/lib/: api.ts
web/providers/: ThemeProvider.tsx
