[project]
name = "insightfinder-api"
version = "0.1.0"
description = "FastAPI backend for InsightFinder — RAG search over SEC filings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    # Migrations -- Alembic depends on SQLAlchemy, and SQLAlchemy needs
    # a sync driver. We ONLY use these for `alembic upgrade head`; the
    # runtime app uses asyncpg.
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    # Ingestion
    "selectolax>=0.3",     # fast HTML parsing (Modest engine, C-based)
    "tiktoken>=0.7",       # OpenAI token counting for chunk-size budgeting
    "openai>=1.50",        # text-embedding-3-small + Claude via Anthropic later
    # Retrieval
    "numpy>=1.26",         # already pulled in by pgvector
]

[project.optional-dependencies]
# Cross-encoder rerank: 280 MB model + ~400 MB torch in RAM. Local-only
# by default. Prod (Render free tier, 512 MB) skips this and the
# hybrid_rerank mode falls back to hybrid silently.
#
# Local install:  uv sync --all-extras
rerank = [
    "sentence-transformers>=3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ─── Ruff (lint + format) ─────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "SIM"]
ignore = [
    "E501",   # line length — formatter handles it
    "B008",   # FastAPI uses Depends() in defaults; that's fine
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Pytest ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
